# serializer version: 1
# name: test_list_document_service_user
  dict({
    'attachments': list([
    ]),
    'business_id': '',
    'content': dict({
    }),
    'content_schema_url': None,
    'created_at': '2020-06-01T03:00:00+03:00',
    'deletable': True,
    'delete_after': None,
    'document_language': None,
    'draft': False,
    'human_readable_type': dict({
    }),
    'id': '485af718-d9d1-46b9-ad7b-33ea054126e3',
    'locked_after': None,
    'metadata': dict({
    }),
    'service': 'service 221',
    'status': dict({
      'status_display_values': dict({
      }),
      'timestamp': '2020-06-01T03:00:00+03:00',
      'value': 'testing',
    }),
    'status_histories': list([
    ]),
    'tos_function_id': '81eee139736f4e52b046a1b27211c202',
    'tos_record_id': '0f499febb6414e1dafc93febca5ef312',
    'transaction_id': 'bd3fd958-cfeb-4ab1-bea4-5c058e8fee5c',
    'type': '',
    'updated_at': '2020-06-01T03:00:00+03:00',
  })
# ---
# name: test_list_document_superuser
  dict({
    'attachments': list([
    ]),
    'business_id': '',
    'content': dict({
    }),
    'content_schema_url': None,
    'created_at': '2020-06-01T03:00:00+03:00',
    'deletable': True,
    'delete_after': None,
    'document_language': None,
    'draft': False,
    'human_readable_type': dict({
    }),
    'id': '485af718-d9d1-46b9-ad7b-33ea054126e3',
    'locked_after': None,
    'metadata': dict({
    }),
    'service': 'service 224',
    'status': dict({
      'status_display_values': dict({
      }),
      'timestamp': '2020-06-01T03:00:00+03:00',
      'value': 'testing',
    }),
    'status_histories': list([
    ]),
    'tos_function_id': '81eee139736f4e52b046a1b27211c202',
    'tos_record_id': '0f499febb6414e1dafc93febca5ef312',
    'transaction_id': 'bd3fd958-cfeb-4ab1-bea4-5c058e8fee5c',
    'type': '',
    'updated_at': '2020-06-01T03:00:00+03:00',
  })
# ---
# name: test_retrieve_document_owner
  dict({
    'attachments': list([
    ]),
    'business_id': '',
    'content': dict({
    }),
    'content_schema_url': None,
    'created_at': '2020-06-01T03:00:00+03:00',
    'deletable': True,
    'delete_after': None,
    'document_language': None,
    'draft': False,
    'human_readable_type': dict({
    }),
    'id': '485af718-d9d1-46b9-ad7b-33ea054126e3',
    'locked_after': None,
    'metadata': dict({
    }),
    'service': 'service 223',
    'status': dict({
      'status_display_values': dict({
      }),
      'timestamp': '2020-06-01T03:00:00+03:00',
      'value': 'testing',
    }),
    'status_histories': list([
    ]),
    'tos_function_id': '81eee139736f4e52b046a1b27211c202',
    'tos_record_id': '0f499febb6414e1dafc93febca5ef312',
    'transaction_id': 'bd3fd958-cfeb-4ab1-bea4-5c058e8fee5c',
    'type': '',
    'updated_at': '2020-06-01T03:00:00+03:00',
  })
# ---
